// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button (unit tests) when the component loads with a label should match the snapshot 1`] = `
<kv-radio label="Accepted">
  <template shadowrootmode="open">
    <div class="radio-container radio-container--size-large">
      <div class="circle" tabindex="0">
        <div class="checked-icon"></div>
      </div>
      <span class="label">
        Accepted
      </span>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with checked prop should match the snapshot 1`] = `
<kv-radio checked="" label="">
  <template shadowrootmode="open">
    <div class="checked radio-container radio-container--size-large">
      <div class="circle" tabindex="-1">
        <div class="checked-icon"></div>
      </div>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with default props should match the snapshot 1`] = `
<kv-radio label="">
  <template shadowrootmode="open">
    <div class="radio-container radio-container--size-large">
      <div class="circle" tabindex="0">
        <div class="checked-icon"></div>
      </div>
    </div>
  </template>
</kv-radio>
`;

exports[`Radio Button (unit tests) when the component loads with disabled prop should match the snapshot 1`] = `
<kv-radio disabled="" label="">
  <template shadowrootmode="open">
    <div class="disabled radio-container radio-container--size-large">
      <div class="circle" tabindex="-1">
        <div class="checked-icon"></div>
      </div>
    </div>
  </template>
</kv-radio>
`;
